--- a/server/index.html
+++ b/server/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IO Chat</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -12,32 +10,56 @@
     body{
         margin-top: 30px;
     }
+    #messageArea{
+        display: none;
+    }
     .chat-card {
         margin-top: 10px;
         margin-bottom: 10px;
     }
+
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="well">
-                    <h3>Online Users</h3>
-                    <ul class="list-group" id="users"></ul>
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="chat" id="chat"></div>
 
-                <form id="messageForm">
+        <!-- Log in -->
+        <div class="row" id="userFormArea">
+            <div class="col-md-12">
+                <form id="userForm">
                     <div class="form-group">
-                        <label>Enter Message</label>
-                        <textarea class="form-control" id="message"></textarea>
+                        <label>Enter Username</label>
+                        <input class="form-control" id="username"></input>
                         <br />
-                        <input type="submit" class="btn btn-primary" value="Send message" />
+                        <input type="submit" class="btn btn-primary" value="Login" />
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <!-- Chat-->
+        <div class="container">
+            <div class="row" id="messageArea">
+                <!-- Online users-->
+                <div class="col-md-4">
+                    <div class="users-card card bg-light p-3">
+                        <h3>Online Users</h3>
+                        <ul class="list-group" id="users"></ul>
+                    </div>
+                </div>
+                <!-- Chat messages -->
+                <div class="col-md-8">
+                    <div class="chat" id="chat"></div>
+                    <!-- Message input -->
+                    <form id="messageForm">
+                        <div class="form-group">
+                            <label>Enter Message</label>
+                            <textarea class="form-control" id="message"></textarea>
+                            <br />
+                            <input type="submit" class="btn btn-primary" value="Send message" />
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
@@ -54,9 +76,14 @@
     <script>
         $(function(){
             var socket = io.connect();
+            var $messageArea = $('#messageArea');
             var $messageForm = $('#messageForm');
             var $message = $('#message');
             var $chat = $('#chat');
+            var $userFormArea = $('#userFormArea');
+            var $userForm = $('#userForm');
+            var $users = $('#users');
+            var $username = $('#username');
 
             $messageForm.submit(function(e) {
                 e.preventDefault();
@@ -65,8 +92,27 @@
             });
 
             socket.on('new message', function(data) {
-                $chat.append('<div class="chat-card card bg-light p-3">'+data.msg+'</div>');
+                $chat.append(`<div class="chat-card card bg-light p-3"><strong>${data.user}: </strong>${data.msg}</div>`);
             });
+
+            $userForm.submit(function(e) {
+                e.preventDefault();
+                socket.emit('new user', $username.val(), function(data) {
+                    if(data) {
+                        $userFormArea.hide();
+                        $messageArea.show();
+                    }
+                });
+                $username.val('');
+            });
+
+            socket.on('get users', function(data){
+                var html = '';
+                for(var i = 0; i < data.length; i++) {
+                    html += '<li class="list-group-item">'+data[i]+'</li>';
+                }
+                $users.html(html);
+            })
         });
     </script>
 
