--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Streamer Dashboard</title>
@@ -8,25 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
-    <app-root>Loading...</app-root>
-    <canvas class="background"></canvas>
+    <app-root>
+        <div id="loading-area">
+            <div class="loading-circle"></div>
+            <div class="loading-circle"></div>
+            <div class="loading-circle"></div>
+            <div class="loading-circle"></div>
+            <div class="loading-circle"></div>
+            <div class="loading-text">Loading...</div>
+            <div class="loading-background"></div>
+          </div>
+    </app-root>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-    <script>
-        window.onload = function () {
-            Particles.init({
-                selector: '.background'
-            });
-        };
-        var particles = Particles.init({
-            selector: '.background',
-            color: ['#DA0463', '#404B69', '#DBEDF3'],
-            maxParticles: 200,
-            connectParticles: true
-        });
-    </script>
-
+<script>
+  window.onload = function () { Particles.init({ selector: '.background' }); };
+  var particles = Particles.init({
+    selector: '.background',
+    color: ['#DA0463', '#404B69', '#DBEDF3'],
+    maxParticles: 200,
+    connectParticles: true
+  });
+</script>
 </body>
-
 </html>
