--- a/public/src/index.html
+++ b/public/src/index.html
@@ -6,6 +6,8 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <app-root>
@@ -21,13 +23,14 @@
     </app-root>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
 <script>
-  window.onload = function () { Particles.init({ selector: '.background' }); };
-  var particles = Particles.init({
-    selector: '.background',
-    color: ['#DA0463', '#404B69', '#DBEDF3'],
-    maxParticles: 200,
-    connectParticles: true
-  });
+  window.onload = function () {
+    Particles.init({
+      selector: '.background',
+      color: ['#DA0463', '#404B69', '#DBEDF3'],
+      maxParticles: 200,
+      connectParticles: true
+    });
+  };
 </script>
 </body>
 </html>
