--- a/public/src/index.html
+++ b/public/src/index.html
@@ -33,5 +33,12 @@
     });
   };
 </script>
+<script type="text/javascript">
+  window.onload = (function () {
+      $('#sidebar-collapse').on('click', function () {
+          $('#sidebar').toggleClass('expanded');
+      });
+  });
+</script>
 </body>
 </html>
