--- a/client/src/index.html
+++ b/client/src/index.html
@@ -48,5 +48,12 @@
       });
   });
 </script>
+<!-- <script>
+  window.onload = (function () {
+    $(document).ready(function(){
+    $('.tooltipped').tooltip();
+  });
+  });
+</script> -->
 </body>
 </html>
