Fixed Navbar and added search

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -48,6 +48,17 @@
       });
   });
 </script>
+<script type="text/javascript">
+  window.onload = (function () {
+      $('#toggle-search').on('click', function () {
+        $('#nav-search-bar').toggleClass('expanded');
+        $('#search-field').toggleClass('expanded').focus();
+      });
+      $('#search-field').on('blur', function () {
+        $('#search-field').toggleClass('expanded');
+      });
+  });
+</script>
 <!-- <script>
   window.onload = (function () {
     $(document).ready(function(){
