--- a/client/src/index.html
+++ b/client/src/index.html
@@ -47,8 +47,11 @@
           $('#sidebar-column').toggleClass('expanded');
       });
       $('#toggle-search').on('click', function () {
-        $('#nav-search-bar').toggleClass('expanded');
-        $('#search-field').toggleClass('expanded').focus();
+        if ($('#search-field').hasClass('expanded')) {
+          $('#search-field').removeClass('expanded');
+        } else {
+          $('#search-field').addClass('expanded').focus();
+        }
       });
       $('#search-field').on('blur', function () {
         $('#search-field').toggleClass('expanded');
