--- a/client/src/index.html
+++ b/client/src/index.html
@@ -42,21 +42,32 @@
 </script>
 <script type="text/javascript">
   window.onload = (function () {
-      $('#sidebar-collapse').on('click', function () {
-          $('#sidebar').toggleClass('expanded');
-          $('#sidebar-column').toggleClass('expanded');
-      });
-      $('#toggle-search').on('click', function () {
-        if ($('#search-field').hasClass('expanded')) {
-          $('#search-field').removeClass('expanded');
-        } else {
-          $('#search-field').addClass('expanded').focus();
-        }
-      });
-      $('#search-field').on('blur', function () {
-        $('#search-field').toggleClass('expanded');
-      });
-      $('.tooltipped').tooltip();
+
+    // TOOLTIPS
+    $('.tooltipped').tooltip();
+
+    // TABS
+    $('.tabs').tabs();
+
+    // SIDEBAR COLLAPSE
+    $('#sidebar-collapse').on('click', function () {
+      $('#sidebar').toggleClass('expanded');
+      $('#sidebar-column').toggleClass('expanded');
+    });
+
+    // SEARCH
+    $('#toggle-search').on('click', function () {
+      if ($('#search-field').hasClass('expanded')) {
+        $('#search-field').removeClass('expanded');
+      } else {
+        $('#search-field').addClass('expanded').focus();
+      }
+    });
+    $('#search-field').on('blur', function () {
+      $('#search-field').toggleClass('expanded');
+    });
+
+
   });
 </script>
 <!-- <script>
