Sidebar toggles tooltips for sidbar buttons now

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -43,17 +43,11 @@
 <script type="text/javascript">
   window.onload = (function () {
 
-    // TOOLTIPS
-    $('.tooltipped').tooltip();
-
-    // TABS
-    $('.tabs').tabs();
-
-    // SIDEBAR COLLAPSE
-    $('#sidebar-collapse').on('click', function () {
-      $('#sidebar').toggleClass('expanded');
-      $('#sidebar-column').toggleClass('expanded');
-    });
+    // // SIDEBAR COLLAPSE
+    // $('#sidebar-toggler').on('click', function () {
+    //   $('#sidebar').toggleClass('expanded');
+    //   $('#sidebar-column').toggleClass('expanded');
+    // });
 
     // SEARCH
     $('#toggle-search').on('click', function () {
