Added landing page

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -48,6 +48,9 @@
     //   $('#sidebar').toggleClass('expanded');
     //   $('#sidebar-column').toggleClass('expanded');
     // });
+    $(document).ready(function(){
+    $('.parallax').parallax();
+  });
 
     // SEARCH
     $('#toggle-search').on('click', function () {
